create all auth route signup,login,logout,profile-pic,check

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,10 @@
-PORT="5001"
+PORT=5001
+MONGODB_URI=mongodb+srv://ashusoni20002:cqDxWnM8IbOHm995@cluster0.qwvkllh.mongodb.net/chat_db?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=mySuperSecretKey123
+NODE_ENV=development
+
+CLOUDINARY_API_KEY=236429995885499
+CLOUDINARY_API_SECRET=3CKAA6Ab_X6_Hcmo8Ujt0iGH5r8
+CLOUDINARY_CLOUD_NAME=dghf1qusy
+
+mongodb_password=cqDxWnM8IbOHm995
