--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.0",
     "mongosh": "^2.5.1",
+    "multer": "^2.0.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
